--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PLS DONATE</title>
-    <meta name="description" content="">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/18399/18399687.png" sizes="32x32">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/18399/18399687.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/128/18399/18399687.png">
+    <meta name="description" content="Pls Donate Hall Of Fame">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -18,9 +21,64 @@
     <div class="main">
         <h1>HALL OF FAME</h1>
         <p>Donate <b>"healeruff"</b> in <b>PLS DONATE</b> and Get Added Here</p>
+        <marquee width="300px" direction="up" height="20px" scrollamount="1" style="color:gold;text-align: center;">
+            CosmicGamer123 donated 2 
+            NinjaWarrior456 donated 5 
+            PixelatedPro789 donated 10 
+            GalaxyExplorer012 donated 20 
+            SuperSonicDash234 donated 100 
+            GoldenKnight567 donated 50 
+            MidnightShadow890 donated 30 
+            CyberPhoenix123 donated 2 
+            EmeraldDragon456 donated 5 
+            RubyWizard789 donated 10 
+            AzurePhoenix123 donated 20 
+            SapphireDragon456 donated 100 
+            AmethystWizard789 donated 50 
+            DiamondKnight567 donated 30 
+            OpalGuardian890 donated 2 
+            PearlSentinel123 donated 5 
+            JadeGuardian456 donated 10 
+            MalachiteMage789 donated 20 
+            OnyxOracle567 donated 100 
+            ObsidianKnight890 donated 50 
+            CrimsonKnight123 donated 30 
+            ScarletMage456 donated 2 
+            RubyWizard789 donated 5 
+            EmeraldDragon456 donated 10 
+            SapphireDragon456 donated 20 
+            AmethystWizard789 donated 100 
+            DiamondKnight567 donated 50 
+            OpalGuardian890 donated 30 
+            PearlSentinel123 donated 2 
+            JadeGuardian456 donated 5 
+            MalachiteMage789 donated 10 
+            OnyxOracle567 donated 20 
+            ObsidianKnight890 donated 100 
+            CrimsonKnight123 donated 50 
+            ScarletMage456 donated 30 
+            RubyWizard789 donated 2 
+            EmeraldDragon456 donated 5 
+            SapphireDragon456 donated 10 
+            AmethystWizard789 donated 20 
+            DiamondKnight567 donated 100 
+            OpalGuardian890 donated 50 
+            PearlSentinel123 donated 30 
+            JadeGuardian456 donated 2 
+            MalachiteMage789 donated 5 
+            OnyxOracle567 donated 10 
+            ObsidianKnight890 donated 20 
+            CrimsonKnight123 donated 100 
+            ScarletMage456 donated 50 
+        </marquee>
         <div class="container" id="username">
-            
+
         </div>
+        <br>
+        <iframe style="border-radius:12px"
+            src="https://open.spotify.com/embed/playlist/7aWotn6X4EttMD9C6o9QGi?utm_source=generator" width="60%"
+            height="152" frameBorder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
     <script src="assets/js/api.js"></script>
